More swagger docs preferences cache forget when fetch new articles
